--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,1 +1,71 @@
-<h1>Ok</h1>
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
+	<link href="/admin/css/style.css" rel="stylesheet" />
+	<script src="https://kit.fontawesome.com/4d66efb478.js"></script>
+
+	<title>Connexion</title>
+</head>
+
+<body>
+
+
+
+	<div class="container">
+		<div class="row centered-form">
+			<div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
+				<div class="panel panel-default">
+					<% if (message) { %>
+
+					<div class="alert alert-<%=message.type%>  text-dark" role="alert">
+						<%=message.intro%>:<%=message.message%>
+						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+
+					<% } %>
+					<div class="panel-heading">
+						<h3 class="panel-title">Connecter votre compte</h3>
+					</div>
+					<div class="panel-body">
+                        <form action="/login/add" method="POST">
+							<div class="form-group">
+							
+
+							<div class="form-group">
+								<label for="email"><i class="fas fa-at" id="icon"></i> Email*</label>
+								<input type="email" class="form-control" name="email" id="email" value=""
+									placeholder="Saisissez votre adresse mail" required> </div>
+
+							<div class="form-group">
+								<label for="password"><i class="fas fa-key" id="icon"></i> Mot de passe* </label>
+
+
+								<input type="password" class="form-control" name="password" id="password" value=""
+									placeholder="Saisissez votre mot de passe" required> </div>
+
+							
+							<input type="submit" value="Se connecter" class="btn btn-info btn-block">
+
+							<div class="col text-center">
+								<small><a class=" text-white" href="/signup">Inscription</a></small>
+
+							</div>
+						</form>
+
+					  
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+</body>
