--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -45,7 +45,8 @@
                         <td><img src="<%= mangas[i].cover %>" width="30%" alt=""></td>
                         <td><%= mangas[i].category.label %></td>
                         <td><a href="/mangas/chapter/create/<%= mangas[i].manga_id %>">Ajouter un chapitre</a></td>
-             
+                        <td><a href="/mangas/chapter/<%= mangas[i].manga_id %>">Voir les chapitre</a></td>
+
 
                     </tr>
                     <% } %>
@@ -53,7 +54,7 @@
                 </tbody>
             </table>
         </div>
-
+    
     
 
     </div>
