--- a/views/mangas/create_page.ejs
+++ b/views/mangas/create_page.ejs
@@ -3,12 +3,11 @@
 
 
     <h1><%= chapter.title %></h1>
-    <input type="number" class="form-control" name="numbre_page" id="numbre_page" value="">
     
     <label for="scan">Select files:</label>
     <input type="file" id="scan" name="scan" multiple>
 
-    <input type="text" class="form-control" name="manga_id" id="manga_id" value="<%= chapter.chapter_id %>" style="display: none;">
+    <input type="text" class="form-control" name="chapter_id" id="chapter_id" value="<%= chapter.chapter_id %>" style="display: none;">
 
 
     <input type="submit" value="Valider">
