--- a/views/mangas/list_chapter.ejs
+++ b/views/mangas/list_chapter.ejs
@@ -1,8 +1,10 @@
+<h1> <%= mangas_chapters[0].manga.title %>
+</h1>
 <table border="1">
     <thead>
         <tr>
-            <th>Titre du manga</th>
             <th>Chapitres</th>
+            <th>Tous les pages</th>
             <th>Ajouter des pages au chapitre</th>
 
 
@@ -13,10 +15,10 @@
         <% for (let i=0; i < mangas_chapters.length; i++) { %>
         <tr>
 
-            <td><%= mangas_chapters[i].manga.title %></td>
             <td><%= mangas_chapters[i].chapter.title %></td>
+            <td><a href="/mangas/pages/<%= mangas_chapters[i].chapter_id %>">Voir les pages</a></td>
             <td><a href="/mangas/pages/create/<%= mangas_chapters[i].chapter_id %>">Ajouter une pages</a></td>
- 
+
 
         </tr>
         <% } %>
