--- a/views/mangas/read.ejs
+++ b/views/mangas/read.ejs
@@ -1,9 +1,83 @@
-<div class="text-center">
-    <nav aria-label="Page navigation example" style="display: inline-block;">
-       <ul class="pagination ">
-          <%for(let i =1; i <= pageCount;  i++ ) {  %>
-          <li class="page-item active"><a class="page-link" href="/page?page=<%=i%>"><%=i%></a></li>
-          <% } %>
-       </ul>
-    </nav>
- </div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+   <title>Read</title>
+</head>
+
+<body>
+
+   <div class="container">
+
+     
+
+         <% if (chapters_pages) { %>
+
+         <% for (var i = 0; i < chapters_pages.length; i++) { %>
+
+
+         
+            <p>Id:<%= chapters_pages[i].chapter_id %></p>
+            <p>Nom du chapitre:<%= chapters_pages[i].chapter.title %></p>
+
+            <img id="" src="<%= chapters_pages[i].page.scan %>" width="50%">
+
+
+         <% } %>
+         <% } %>
+
+      
+
+
+
+
+         <!-- Pagination -->
+
+         <div class="text-center">
+            <nav aria-label="Page navigation example" style="display: inline-block;">
+               <ul class="pagination ">
+                  <%for(let i =1; i <= pageCount;  i++ ) {  %>
+                  <li class="page-item active"><a class="page-link" href="/mangas/page?page=<%=i%>"><%=i%></a></li>
+                  <% } %>
+               </ul>
+            </nav>
+         </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+         </script>
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+         </script>
+         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+         </script>
+
+</body>
+
+</html>
