--- a/views/mangas/view_mangas.ejs
+++ b/views/mangas/view_mangas.ejs
@@ -18,7 +18,6 @@
     <title>Document</title>
 </head>
 
-<input>
 
 
 <h1><%=mangas.title %></h1>
@@ -41,7 +40,6 @@
     cursor: pointer;
     opacity: 0;
 ">
-    </input>
     <img src="/admin/img/nolike.png" width="4%" id="img_like" alt="">
 </div>
 
@@ -79,7 +77,7 @@
 <ul>
     <% for (let i=0; i < mangas_chapters.length; i++) { %>
 
-    <li><a href="/mangas/read/<%=mangas_chapters[i].chapter.chapter_id %>"><%=mangas_chapters[i].chapter.title %></a>
+    <li><a href="/mangas/page/<%=mangas_chapters[i].chapter.chapter_id %>"><%=mangas_chapters[i].chapter.title %></a>
     </li>
     <% } %>
 
