vue read manga ok

--- a/views/mangas/read.ejs
+++ b/views/mangas/read.ejs
@@ -41,11 +41,11 @@
          <div class="text-center">
             <nav aria-label="Page navigation example" style="display: inline-block;">
                   <ul class="pagination">
-                    <li class="page-item"><a class="page-link" href="/mangas/page/<%=preview%>">Previous</a></li>
+                    <li class="page-item"><a class="page-link" href="/mangas/<%= chapters_pages[0].chapter.manga_id %>/page/<%=preview%>">Previous</a></li>
                     <%for(let i =1; i <= pageCount;  i++ ) {  %>
-                     <li class="page-item active"><a class="page-link" href="/mangas/page/<%=chapter_id%>/?page=<%=i%>"><%=i%></a></li>
+                     <li class="page-item active"><a class="page-link" href="/mangas/<%= chapters_pages[0].chapter.manga_id %>/page/<%=chapter_id%>/?page=<%=i%>"><%=i%></a></li>
                      <% } %>
-                    <li class="page-item"><a class="page-link" href="/mangas/page/<%=next%>">Next</a></li>
+                    <li class="page-item"><a class="page-link" href="/mangas/<%= chapters_pages[0].chapter.manga_id %>/page/<%=next%>">Next</a></li>
                   </ul>
          
             </nav>
