fonctionaliter favoris fonctionne

--- a/views/mangas/list_mangas.ejs
+++ b/views/mangas/list_mangas.ejs
@@ -44,8 +44,7 @@
                         <td><%= mangas[i].title %></td>
                         <td><a href="/mangas/fiche/<%= mangas[i].manga_id %>"><img src="<%= mangas[i].cover %>" width="30%" alt=""></a></td>
                         <td><%= mangas[i].category.label %></td>
-                        <td><a href="/mangas/chapter/create/<%= mangas[i].manga_id %>">Ajouter un chapitre</a></td>
-                        <td><a href="/mangas/chapter/<%= mangas[i].manga_id %>">Voir les chapitre</a></td>
+                        <td><a href="/mangas/<%= mangas[i].manga_id %>/page/<%= mangas_chapter[i].chapter.chapter_id %>">Lire</a></td>
                         
 
 
