--- a/views/mangas/view_mangas.ejs
+++ b/views/mangas/view_mangas.ejs
@@ -56,11 +56,14 @@
         <%if (locals.user) {%>
         <%if (mangas_user) { %>
         <span class="selected-rating"><%=mangas_user.score%></span><small> / 5</small>
+
         <%}%>
         <%}else{%>
         <span class="selected-rating">0</span><small> / 5</small>
 
         <%}%>
+        <p>Noté en moyenne à <small><%=score_total%>/5 sur <%=total_vote%> votes</small></p>
+
     </h2>
     <button type="button" class="btnrating btn btn-default btn-sm" data-attr="1" id="rating-star-1">
         <i class="fa fa-star" aria-hidden="true"></i>
@@ -99,6 +102,15 @@
 
 
         <%if (mangas_user) { %>
+            <%if (mangas_user.score) { %>
+            var nb=parseInt('<%=mangas_user.score%>')
+            for (i = 1; i <= nb; ++i) {
+                $("#rating-star-" + i).toggleClass('btn-warning');
+                $("#rating-star-" + i).toggleClass('btn-default');
+            }
+
+            <%}%>
+
         <%if (mangas_user.favoris === 1) { %>
             document.getElementById("like").value = 1;
 
@@ -111,10 +123,16 @@
 
             $('#img_like').attr('src', "/admin/img/nolike.png");
         <%}%>
+      
+
         <%}%>
 
 
+   
+
         $(".btnrating").on('click', (function (e) {
+
+            
 
             var previous_value = $("#selected_rating").val();
 
