action delete manga

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -46,6 +46,8 @@
                         <td><%= mangas[i].category.label %></td>
                         <td><a href="/mangas/chapter/create/<%= mangas[i].manga_id %>">Ajouter un chapitre</a></td>
                         <td><a href="/mangas/chapter/<%= mangas[i].manga_id %>">Voir les chapitre</a></td>
+                        <td><a href="/delete/<%= mangas[i].manga_id %>">Supprimer</a></td>
+
                         
 
 
