--- a/public/admin/css/interface.css
+++ b/public/admin/css/interface.css
@@ -1,82 +1,261 @@
-/*
-* Style tweaks
-* --------------------------------------------------
-*/
-html,
+@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
+
+* {
+  box-sizing: border-box;
+}
+
 body {
-    overflow-x: hidden; /* Prevent scroll on narrow devices */
-}
-body {
-    padding-top: 100px;
-}
-footer {
-    padding: 30px 0;
+  margin: 0px;
+  font-family: 'segoe ui';
 }
 
-/*
- * Custom styles
- */
-.navbar-brand {
-    font-size: 24px;
+#search {
+  width: 30%;
+  border-radius: 10px;
+  height: 23px;
 }
 
-.navbar-container {
-    padding: 20px 0 20px 0;
+.nav {
+  height: 50px;
+  width: 100%;
+  background-color: #2c3e50;
+  position: relative;
 }
 
-.navbar.navbar-fixed-top.fixed-theme {
-    background-color: #222;
-    border-color: #080808;
-    box-shadow: 0 0 5px rgba(0,0,0,.8);
+.nav>.nav-header {
+  display: inline;
 }
 
-.navbar-brand.fixed-theme {
-    font-size: 18px;
+.nav>.nav-header>.nav-title {
+  display: inline-block;
+  font-size: 22px;
+  color: #fff;
+  padding: 10px 10px 10px 10px;
 }
 
-.navbar-container.fixed-theme {
-    padding: 0;
+.nav>.nav-btn {
+  display: none;
 }
 
-.navbar-brand.fixed-theme,
-.navbar-container.fixed-theme,
-.navbar.navbar-fixed-top.fixed-theme,
-.navbar-brand,
-.navbar-container{
-    transition: 0.8s;
-    -webkit-transition:  0.8s;
+.nav>.nav-links {
+  display: inline;
+  float: right;
+  font-size: 18px;
 }
 
-
-
-.content
-{
-    padding: 15px;
-}
-.author
-{
-    font-size: 11px;
-    color: #737373;
-    padding: 25px 30px 20px;
+.nav>.nav-links>a {
+  display: inline-block;
+  padding: 13px 10px 13px 10px;
+  text-decoration: none;
+  color: #efefef;
 }
 
-.post-img-content img
-{
-    position: absolute;
+.nav>.nav-links>a:hover {
+  background-color: rgba(240, 22, 22, 0.808);
 }
-.post-title
-{
-    display: table-cell;
-    vertical-align: bottom;
-    z-index: 2;
-    position: relative;
+
+.nav>#nav-check {
+  display: none;
 }
-.post-title b
-{
-    background-color: rgba(51, 51, 51, 0.58);
+
+@media (max-width:600px) {
+  .nav>.nav-btn {
     display: inline-block;
-    margin-bottom: 5px;
-    color: #FFF;
-    padding: 10px 15px;
-    margin-top: 5px;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+  }
+
+  .nav>.nav-btn>label {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    padding: 13px;
+  }
+
+  .nav>.nav-btn>label:hover,
+  .nav #nav-check:checked~.nav-btn>label {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
+  .nav>.nav-btn>label>span {
+    display: block;
+    width: 25px;
+    height: 10px;
+    border-top: 2px solid #eee;
+  }
+
+  .nav>.nav-links {
+    position: absolute;
+    display: block;
+    width: 100%;
+    background-color: #333;
+    height: 0px;
+    transition: all 0.3s ease-in;
+    overflow-y: hidden;
+    top: 50px;
+    left: 0px;
+  }
+
+  .nav>.nav-links>a {
+    display: block;
+    width: 100%;
+  }
+
+  .nav>#nav-check:not(:checked)~.nav-links {
+    height: 0px;
+  }
+
+  .nav>#nav-check:checked~.nav-links {
+    height: calc(100vh - 50px);
+    overflow-y: auto;
+  }
+}
+
+
+.container {
+  display: grid;
+  grid-template-areas:
+    "header header header"
+    "nav section aside"
+    "footer footer footer";
+  grid-template-columns: 0% 1fr 18%;
+
+}
+
+
+
+section {
+  background: #ABABAB;
+  grid-area: section;
+}
+
+aside {
+  background: #C9C9C9;
+  grid-area: aside;
+}
+
+
+
+header,
+nav,
+section,
+aside,
+footer {
+  padding: 5px;
+}
+
+
+
+
+a {
+  text-decoration: none;
+}
+
+h1,
+h2 {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+}
+
+.row {
+  max-width: 900px;
+  margin: 50px auto 0;
+}
+
+.card {
+  float: left;
+  padding: 0 1.7rem;
+  width: 50%;
+  margin-top: 10px;
+
+}
+
+
+.card .wrapper {
+  min-height: 336px;
+  position: relative;
+  overflow: hidden;
+}
+
+.card .data {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 20%;
+
+}
+
+.card .data .content {
+  padding: 1px;
+  position: relative;
+  z-index: 1;
+}
+
+.card .title {
+  margin-top: 10px;
+  text-align: center;
+}
+
+.card .text {
+  height: 70px;
+  margin: 0;
+}
+
+
+.example-1 .date {
+  position: absolute;
+  top: 5px;
+  left: 0;
+  background-color: #e31c08bf;
+  color: #fff;
+  padding: 2px;
+  width: 129px;
+  border-radius: 0 20px 20px 0;
+}
+
+.example-1 .date span {
+  display: block;
+  text-align: center;
+}
+
+.example-1 .date .day {
+  font-weight: 700;
+  font-size: 16px;
+  text-align: inherit;
+}
+
+.example-1 .content {
+  background-color: rgb(0 0 0 / 68%);
+  box-shadow: 0 5px 30px 10px rgba(0, 0, 0, 0.3);
+}
+
+.example-1 .title a {
+  color: #ffffff;
+}
+
+a {
+  color: #FFFF;
+  text-decoration: none;
+}
+
+#categorie {
+  background: #00000054;
+  border-radius: 10px;
+  font-family: "Open Sans", sans-serif;
+  font-size: larger;
+  list-style-type: none;
+
+}
+
+.cat {
+  margin: 20px;
+}
+
+small {
+  position: absolute;
+  top: 40px;
+  color: white;
+  padding: 5px;
 }
